# PR3

./: CMakeLists.txt  Makefile  Orientaciones.md  README.md  indicaciones.txt  latest  subscription.c
UOCPlay/: CMakeLists.txt
UOCPlay/include/: film.h  subscription.h  subscription.h.bak
UOCPlay/src/: api.c  film.c  person.c  subscription.c  subscription.c.bak  subscription.c.original  watchstack.c
